RESOLVED FIXED88808
[BlackBerry] Fix crash in InputHandler
https://bugs.webkit.org/show_bug.cgi?id=88808
Summary [BlackBerry] Fix crash in InputHandler
Crystal Zhang
Reported 2012-06-11 14:25:53 PDT
m_page is destroyed before InputHandler, so should move the call to destroy popup to ~WebPagePrivate().
Attachments
patch (2.82 KB, patch)
2012-06-11 15:11 PDT, Crystal Zhang
tonikitoo: review+
upated patch (2.84 KB, patch)
2012-06-11 15:46 PDT, Crystal Zhang
tonikitoo: review+
tonikitoo: commit-queue-
updated patch (2.86 KB, patch)
2012-06-12 08:14 PDT, Crystal Zhang
no flags
updated patch (2.88 KB, patch)
2012-06-12 08:22 PDT, Crystal Zhang
no flags
Crystal Zhang
Comment 1 2012-06-11 15:11:01 PDT
Antonio Gomes
Comment 2 2012-06-11 15:37:58 PDT
chrystal is doing a change..
Crystal Zhang
Comment 3 2012-06-11 15:46:41 PDT
Created attachment 146938 [details] upated patch
Antonio Gomes
Comment 4 2012-06-11 16:49:08 PDT
Comment on attachment 146938 [details] upated patch View in context: https://bugs.webkit.org/attachment.cgi?id=146938&action=review > Source/WebKit/blackberry/ChangeLog:8 > + m_page is destroyed before InputHandler, so should move the call to destroy popup to ~WebPagePrivate(). needs to update it :(
Crystal Zhang
Comment 5 2012-06-12 08:14:59 PDT
Created attachment 147089 [details] updated patch
Crystal Zhang
Comment 6 2012-06-12 08:22:22 PDT
Created attachment 147090 [details] updated patch
WebKit Review Bot
Comment 7 2012-06-12 10:29:16 PDT
Comment on attachment 147090 [details] updated patch Clearing flags on attachment: 147090 Committed r120091: <http://trac.webkit.org/changeset/120091>
WebKit Review Bot
Comment 8 2012-06-12 10:29:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.