[BlackBerry] Fix crash in InputHandler https://bugs.webkit.org/show_bug.cgi?id=88808

Patch by Crystal Zhang <haizhang@rim.com> on 2012-06-12
Reviewed by Antonio Gomes.

m_page is destroyed before InputHandler, so should move the call to destroy popup to chromeDestroyed().

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::chromeDestroyed():
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::~InputHandler):

Canonical link: https://commits.webkit.org/106720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120091 268f45cc-cd09-0410-ab3c-d52691b4dbfc